--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,8 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -28,11 +22,30 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.Footer {
+  background-color: #282c34;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: .5em;
+
+}
+
+a.links:link,
+a.links:visited {
+  border-radius: 0.2em;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  padding: 0.2em;
+}
+
+a.links:hover,
+a.links:active {
+  /*background-color: rgba(44, 22, 444, 40);*/
+  background-color: rgba(219, 219, 219, 0.24);
+  border-radius: 1em;
 }
