--- a/src/App.css
+++ b/src/App.css
@@ -22,15 +22,12 @@
   color: #61dafb;
 }
 
-
-
 .Footer {
   background-color: #282c34;
   color: white;
   display: flex;
   flex-direction: column;
-  font-size: .5em;
-
+  font-size: 0.5em;
 }
 
 a.links:link,
@@ -47,5 +44,5 @@ a.links:hover,
 a.links:active {
   /*background-color: rgba(44, 22, 444, 40);*/
   background-color: rgba(219, 219, 219, 0.24);
-  border-radius: 1em;
+  /*border-radius: 1em;*/
 }
