--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,14 @@
   color: #61dafb;
 }
 
+.Timers {
+  width: 50vw;
+  /*margin: 0 0;*/
+  display:grid;
+  overflow: hidden;
+  text-align: center;
+}
+
 .Footer {
   background-color: #282c34;
   color: white;
